--- a/branches/dev-issue-21/MyNightOut/src/mynightout/ui/StoreRegisterForm.form
+++ b/branches/dev-issue-21/MyNightOut/src/mynightout/ui/StoreRegisterForm.form
@@ -26,25 +26,25 @@
           <Group type="102" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="jLabel1" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Component id="RegisterTitle" alignment="0" min="-2" max="-2" attributes="0"/>
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="40" max="-2" attributes="0"/>
-                      <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
+                      <Component id="RegisterStory" min="-2" max="-2" attributes="0"/>
                   </Group>
-                  <Component id="jLabel3" alignment="0" min="-2" max="-2" attributes="0"/>
-                  <Component id="jLabel6" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Component id="RegisterClues" alignment="0" min="-2" max="-2" attributes="0"/>
+                  <Component id="RegisterCompanyIssues" alignment="0" min="-2" max="-2" attributes="0"/>
                   <Group type="102" alignment="0" attributes="0">
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="jLabel4" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="jLabel5" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="jLabel7" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="jLabel9" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="jLabel10" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="jLabel11" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="jLabel8" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="jLabel12" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="jLabel13" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="jLabel14" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="RegisterName" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="RegisterPass" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="RegisterCompanyName" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="RegisterAddress" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="RegisterPost" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="RegisterTel1" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="RegisterTel2" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="RegisterFax" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="RegisterMobile" alignment="0" min="-2" max="-2" attributes="0"/>
+                          <Component id="RegisterEmail" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" pref="31" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
@@ -60,7 +60,7 @@
                           <Component id="EmailTextField" alignment="0" pref="80" max="32767" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" pref="48" max="-2" attributes="0"/>
-                      <Component id="jButton1" min="-2" max="-2" attributes="0"/>
+                      <Component id="RegisterButton" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
               <EmptySpace pref="27" max="32767" attributes="0"/>
@@ -71,62 +71,62 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
+              <Component id="RegisterTitle" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
+              <Component id="RegisterStory" min="-2" max="-2" attributes="0"/>
               <EmptySpace min="-2" pref="12" max="-2" attributes="0"/>
-              <Component id="jLabel3" min="-2" max="-2" attributes="0"/>
+              <Component id="RegisterClues" min="-2" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jLabel4" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="RegisterName" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="DesUserTextField" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jLabel5" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="RegisterPass" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="DesPassTextField" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
-              <Component id="jLabel6" min="-2" max="-2" attributes="0"/>
+              <Component id="RegisterCompanyIssues" min="-2" max="-2" attributes="0"/>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jLabel7" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="RegisterCompanyName" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="CompanyTextField" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace type="unrelated" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jLabel9" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="RegisterAddress" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="AdressTextField" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="jButton1" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="RegisterButton" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jLabel10" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="RegisterPost" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="PostcodeTextField" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jLabel11" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="RegisterTel1" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="Tel1TextField" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jLabel8" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="RegisterTel2" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="Tel2TextField" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jLabel12" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="RegisterFax" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="FaxTextField" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jLabel13" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="RegisterMobile" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="MobileTextField" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
-                  <Component id="jLabel14" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="RegisterEmail" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="EmailTextField" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="32767" attributes="0"/>
@@ -135,7 +135,7 @@
     </DimensionLayout>
   </Layout>
   <SubComponents>
-    <Component class="javax.swing.JLabel" name="jLabel1">
+    <Component class="javax.swing.JLabel" name="RegisterTitle">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="11" style="3"/>
@@ -143,17 +143,17 @@
         <Property name="text" type="java.lang.String" value="&#x395;&#x3b3;&#x3b3;&#x3c1;&#x3b1;&#x3c6;&#x3ae; &#x3b5;&#x3bc;&#x3c0;&#x3cc;&#x3c1;&#x3bf;&#x3c5;"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="jLabel2">
+    <Component class="javax.swing.JLabel" name="RegisterStory">
       <Properties>
         <Property name="text" type="java.lang.String" value="&#x391;&#x3c5;&#x3c4;&#x3ae; &#x3b7; &#x3c6;&#x3cc;&#x3c1;&#x3bc;&#x3b1; &#x3b5;&#x3af;&#x3bd;&#x3b1;&#x3b9; &#x3bc;&#x3cc;&#x3bd;&#x3bf; &#x3b3;&#x3b9;&#x3b1; &#x3c4;&#x3bf;&#x3c5;&#x3c2; &#x3ba;&#x3b1;&#x3c4;&#x3b1;&#x3c3;&#x3c4;&#x3b7;&#x3bc;&#x3b1;&#x3c4;&#x3ac;&#x3c1;&#x3c7;&#x3b5;&#x3c2;.&#xa;&#x388;&#x3c7;&#x3b5;&#x3c4;&#x3b5; 2 &#x3bc;&#x3ae;&#x3bd;&#x3b5;&#x3c2; &#x3b4;&#x3c9;&#x3c1;&#x3b5;&#x3ac;&#x3bd; &#x3b4;&#x3bf;&#x3ba;&#x3b9;&#x3bc;&#x3ae;&#x3c2; &#x3ba;&#x3b1;&#x3b9; &#x3b4;&#x3b5;&#x3bd; &#x3b5;&#x3af;&#x3c3;&#x3b1;&#x3c3;&#x3c4;&#x3b5; &#x3c5;&#x3c0;&#x3bf;&#x3c7;&#x3c1;&#x3b5;&#x3c9;&#x3bc;&#x3ad;&#x3bd;&#x3bf;&#x3b9;&#xa; &#x3bd;&#x3b1; &#x3c3;&#x3c5;&#x3bd;&#x3b5;&#x3c7;&#x3af;&#x3c3;&#x3b5;&#x3c4;&#x3b5; &#x3bc;&#x3b5;&#x3c4;&#x3ac; &#x3c4;&#x3b7;&#x3bd; &#x3b4;&#x3bf;&#x3ba;&#x3b9;&#x3bc;&#x3b1;&#x3c3;&#x3c4;&#x3b9;&#x3ba;&#x3ae; &#x3c0;&#x3b5;&#x3c1;&#x3af;&#x3bf;&#x3b4;&#x3bf;."/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="jLabel3">
+    <Component class="javax.swing.JLabel" name="RegisterClues">
       <Properties>
         <Property name="text" type="java.lang.String" value="&#x3a3;&#x3c4;&#x3bf;&#x3b9;&#x3c7;&#x3b5;&#x3af;&#x3b1; &#x39b;&#x3bf;&#x3b3;&#x3b1;&#x3c1;&#x3b9;&#x3b1;&#x3c3;&#x3bc;&#x3bf;&#x3cd;"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="jLabel4">
+    <Component class="javax.swing.JLabel" name="RegisterName">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="11" style="3"/>
@@ -161,7 +161,7 @@
         <Property name="text" type="java.lang.String" value="&#x395;&#x3c0;&#x3b9;&#x3b8;&#x3c5;&#x3bc;&#x3b7;&#x3c4;&#x3cc; &#x3cc;&#x3bd;&#x3bf;&#x3bc;&#x3b1; &#x3c7;&#x3c1;&#x3ae;&#x3c3;&#x3c4;&#x3b7;:"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="jLabel5">
+    <Component class="javax.swing.JLabel" name="RegisterPass">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="11" style="3"/>
@@ -169,12 +169,12 @@
         <Property name="text" type="java.lang.String" value="&#x395;&#x3c0;&#x3b9;&#x3b8;&#x3c5;&#x3bc;&#x3b7;&#x3c4;&#x3cc;&#x3c2; &#x3ba;&#x3c9;&#x3b4;&#x3b9;&#x3ba;&#x3cc;&#x3c2;"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="jLabel6">
+    <Component class="javax.swing.JLabel" name="RegisterCompanyIssues">
       <Properties>
         <Property name="text" type="java.lang.String" value="&#x3a3;&#x3c4;&#x3bf;&#x3b9;&#x3c7;&#x3b5;&#x3af;&#x3b1; &#x395;&#x3c4;&#x3b1;&#x3b9;&#x3c1;&#x3b5;&#x3af;&#x3b1;&#x3c2;"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="jLabel7">
+    <Component class="javax.swing.JLabel" name="RegisterCompanyName">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="11" style="3"/>
@@ -182,7 +182,7 @@
         <Property name="text" type="java.lang.String" value="&#x395;&#x3c0;&#x3c9;&#x3bd;&#x3c5;&#x3bc;&#x3af;&#x3b1;"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="jLabel9">
+    <Component class="javax.swing.JLabel" name="RegisterAddress">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="11" style="3"/>
@@ -190,7 +190,7 @@
         <Property name="text" type="java.lang.String" value="&#x394;&#x3b9;&#x3b5;&#x3cd;&#x3b8;&#x3c5;&#x3bd;&#x3c3;&#x3b7;"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="jLabel10">
+    <Component class="javax.swing.JLabel" name="RegisterPost">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="11" style="3"/>
@@ -198,7 +198,7 @@
         <Property name="text" type="java.lang.String" value=" &#x3a4;&#x3b1;&#x3c7;&#x3c5;&#x3b4;&#x3c1;&#x3bf;&#x3bc;&#x3b9;&#x3ba;&#x3cc;&#x3c2; &#x39a;&#x3ce;&#x3b4;&#x3b9;&#x3ba;&#x3b1;&#x3c2; "/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="jLabel11">
+    <Component class="javax.swing.JLabel" name="RegisterTel1">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="11" style="3"/>
@@ -206,7 +206,7 @@
         <Property name="text" type="java.lang.String" value="&#x3a4;&#x3b7;&#x3bb;&#x3ad;&#x3c6;&#x3c9;&#x3bd;&#x3bf; 1"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="jLabel8">
+    <Component class="javax.swing.JLabel" name="RegisterTel2">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="11" style="3"/>
@@ -214,7 +214,7 @@
         <Property name="text" type="java.lang.String" value="&#x3a4;&#x3b7;&#x3bb;&#x3ad;&#x3c6;&#x3c9;&#x3bd;&#x3bf; 2"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="jLabel12">
+    <Component class="javax.swing.JLabel" name="RegisterFax">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="11" style="3"/>
@@ -222,7 +222,7 @@
         <Property name="text" type="java.lang.String" value="Fax"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="jLabel13">
+    <Component class="javax.swing.JLabel" name="RegisterMobile">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="11" style="3"/>
@@ -230,7 +230,7 @@
         <Property name="text" type="java.lang.String" value="&#x39a;&#x3b9;&#x3bd;&#x3b7;&#x3c4;&#x3cc;"/>
       </Properties>
     </Component>
-    <Component class="javax.swing.JLabel" name="jLabel14">
+    <Component class="javax.swing.JLabel" name="RegisterEmail">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="11" style="3"/>
@@ -258,12 +258,12 @@
     </Component>
     <Component class="javax.swing.JTextField" name="EmailTextField">
     </Component>
-    <Component class="javax.swing.JButton" name="jButton1">
+    <Component class="javax.swing.JButton" name="RegisterButton">
       <Properties>
         <Property name="text" type="java.lang.String" value="&#x391;&#x3c0;&#x3bf;&#x3c3;&#x3c4;&#x3bf;&#x3bb;&#x3ae; &#x391;&#x3af;&#x3c4;&#x3b7;&#x3c3;&#x3b7;&#x3c2;"/>
       </Properties>
       <Events>
-        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton1ActionPerformed"/>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="RegisterButtonActionPerformed"/>
       </Events>
     </Component>
   </SubComponents>
