--- a/trunk/MyNightOut/src/mynightout/ui/LoginForm.form
+++ b/trunk/MyNightOut/src/mynightout/ui/LoginForm.form
@@ -104,6 +104,9 @@
       <Properties>
         <Property name="toolTipText" type="java.lang.String" value="username"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="userNameFieldActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="passWordField">
       <Properties>
